feature: API Report and Get User
